# skin-parts

./: LICENSE  Makefile.am  README  configure.ac  makegen.py
MetrixHD/skinparts/: Kraven_Fischmod_Infobars_HD
Universal/skinparts/Fischreiher_Infobars_KravenVBlike_HD/: Fischreiher_Infobars_KravenVBlike_HD.xml
allScreens/: skin_Kraven_Fischmod_Infobars_HD.xml
otherData/Fischreiher_Infobars_KravenVBlike_HD/building_blocks/: Fischreiher_Infobars_KravenVBlike_HD.xml.header
otherData/Fischreiher_Infobars_KravenVBlike_HD/icons.source/: Fisch_red_dot.psd  Fischreiher_Infobars.psd  ico_rec_off_fhd.psd  ico_rec_on_uhd.psd
otherData/Fischreiher_Infobars_KravenVBlike_HD/tools/: ConvertAtileToMetrix.sh  ConvertAtile_HD_to_FHD.sh  copy.sh
otherData/Kraven_Fischmod_Infobars_HD/tools/: ConvertUniversalToMetrix.sh  copy.sh
otherData/skin_Kraven_Fischmod_Infobars_HD.icons.source/: ico_rec_off.psd  ico_rec_on.psd
skinparts/: Makefile.am
skinparts-universal-FischreiherInfobars/Fischreiher_Infobars_KravenVBlike_FHD/: Fischreiher_Infobars_KravenVBlike_FHD_Atile.xml
skinparts/Kraven_Fischmod_Infobars_HD/: Kraven_Fischmod_Infobars_HD.xml  skin_Kraven_Fischmod_Infobars_HD.xml
skinparts/skinparts-MetrixHD-HD75hdPack/: Makefile.am
skinparts/skinparts-MetrixHD-HD75hdPack/CONTROL/: control
skinparts/skinparts-MetrixHD-HD75hdPack/Clock-01/: Clock-01.txt  Clock-01.xml  Makefile.am
skinparts/skinparts-MetrixHD-HD75hdPack/Clock-02/: Clock-02.txt  Clock-02.xml  (+1 more)
skinparts/skinparts-universal-4l3x2k/: Makefile.am
skinparts/skinparts-universal-FischreiherInfobars/: Makefile.am
(+58 files in other folders)
