AC_INIT([skin-parts],4.3.0,[https://github.com/openatv/skin-parts/issues])
AM_INIT_AUTOMAKE([foreign])

AM_PATH_PYTHON

AC_OUTPUT([
Makefile
skinparts/Makefile
skinparts/skinparts-MetrixHD-HD75hdPack/gEPG-XL/Makefile
skinparts/skinparts-MetrixHD-HD75hdPack/Makefile
skinparts/skinparts-MetrixHD-HD75hdPack/meta/Makefile
skinparts/skinparts-universal-FischreiherInfobars/Fischreiher_Infobars_KravenVBlike_FHD/Makefile
skinparts/skinparts-universal-FischreiherInfobars/Fischreiher_Infobars_KravenVBlike_HD/fonts/Makefile
skinparts/skinparts-universal-FischreiherInfobars/Fischreiher_Infobars_KravenVBlike_HD/icons_FHD/Makefile
skinparts/skinparts-universal-FischreiherInfobars/Fischreiher_Infobars_KravenVBlike_HD/icons_HD/Makefile
skinparts/skinparts-universal-FischreiherInfobars/Fischreiher_Infobars_KravenVBlike_HD/icons_UHD/Makefile
skinparts/skinparts-universal-FischreiherInfobars/Fischreiher_Infobars_KravenVBlike_HD/Makefile
skinparts/skinparts-universal-FischreiherInfobars/Fischreiher_Infobars_KravenVBlike_HD/preview/Makefile
skinparts/skinparts-universal-FischreiherInfobars/Makefile
skinparts/skinparts-universal-FischreiherInfobars/meta/Makefile
])
